[gd_scene load_steps=11 format=3 uid="uid://5u3t1bpi3bnh"]

[ext_resource type="Script" path="res://Scenes/Units/missile.gd" id="1_qmmru"]
[ext_resource type="Texture2D" uid="uid://2qor4oid4mn7" path="res://Art/128x128_white_circle.png" id="2_ywuve"]
[ext_resource type="PackedScene" uid="uid://cjl0at5jqf1so" path="res://Scenes/Effects/smoke_particle.tscn" id="3_xfkv7"]
[ext_resource type="AudioStream" uid="uid://l73jva4q1vq3" path="res://Sound/missile_launch_sound.mp3" id="4_obak2"]

[sub_resource type="Gradient" id="Gradient_bggb6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_60e2t"]
gradient = SubResource("Gradient_bggb6")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.165138, 0.844037)

[sub_resource type="Gradient" id="Gradient_4837q"]
colors = PackedColorArray(1, 1, 0, 0.584314, 1, 1, 0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_ai63p"]

[sub_resource type="Gradient" id="Gradient_k2ckh"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sisp1"]
gradient = SubResource("Gradient_k2ckh")
fill = 1
fill_from = Vector2(0.524272, 0.495146)
fill_to = Vector2(0.825243, 0.18932)

[node name="Missile" type="RigidBody2D"]
position = Vector2(146, 255)
collision_layer = 0
collision_mask = 8
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_qmmru")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(1, 0.701756, 0.443071, 1)
energy = 6.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_60e2t")
texture_scale = 10.0
height = 1.0

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 100, 0)
gradient = SubResource("Gradient_4837q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ai63p")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.376471, 0, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ywuve")

[node name="Sprite2D3" type="Sprite2D" parent="Sprite2D"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ywuve")

[node name="LifetimeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
autostart = true

[node name="MovementTrailEffect" type="CPUParticles2D" parent="."]
lifetime = 2.0
speed_scale = 10.0
texture = SubResource("GradientTexture2D_sisp1")
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
linear_accel_max = 10.0
color = Color(1, 1, 1, 0.156863)

[node name="SmokeParticle" parent="." instance=ExtResource("3_xfkv7")]
direction = Vector2(0, 0)
spread = 180.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_obak2")
volume_db = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
